# Advent

./: .gitignore  CMakeLists.txt  vcpkg.json
day/: CMakeLists.txt  day.cpp  day.h
day1/: CMakeLists.txt  day1.cpp  day1.h
day2/: CMakeLists.txt  day2.cpp
day3/: CMakeLists.txt  day3.cpp  day3.h
day4/: CMakeLists.txt  day4.cpp  day4.h
day5/: CMakeLists.txt  day5.cpp  day5.h
day6/: CMakeLists.txt  day6.cpp  day6.h
day7/: CMakeLists.txt
day8/: CMakeLists.txt  day8.cpp
day9/: CMakeLists.txt  day9.cpp  day9.h
kata/: CMakeLists.txt  kata.cpp
stl/: CMakeLists.txt  stl.cpp
stl1/: CMakeLists.txt  stl1.cpp  stl1.h
stl2/: CMakeLists.txt  stl2.cpp
stl3/: CMakeLists.txt  stl3.cpp
stl4/: CMakeLists.txt  stl4.cpp  stl4.h
stl5/: CMakeLists.txt  stl5.cpp
